# financial-discloser

./: .env-template  .gitignore  Cargo.toml  README.md  git_yeeter.sh
.nova/: Configuration.json
data/: report.yml
data/raw/indexes/: 2014FD.xml  2016FD.xml  2017FD.xml  2018FD.xml  2019FD.xml  2020FD.xml  2021FD.xml  2022FD.xml  2023FD.xml  2024FD.xml
scripts/: connect_vpn.sh  disconnect_vpn.sh  rotate_vpn.sh
src/: build_index.rs  main.rs  pdf_download.rs
